--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".screens.AddMovies" android:exported="false"/>
+        <activity android:name=".screens.SearchActors" android:exported="false"/>
+        <activity android:name=".screens.SearchMovies" android:exported="false"/>
+        <activity android:name=".screens.SearchByTitle" android:exported="false"/>
     </application>
 
 </manifest>
